
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct thread_args {int buf_to_write; int mem_fd1; scalar_t__ thp_map; scalar_t__ off; int stop; } ;
typedef int off_t ;


 int MADV_DONTNEED ;
 int MAP_SIZE ;
 int PAGE_SIZE ;
 int SEEK_SET ;
 int TRIES_PER_PAGE ;
 int lseek (int ,int ,int ) ;
 int madvise (scalar_t__,int ,int ) ;
 int write (int ,int ,int ) ;

void *write_thread(struct thread_args *args) {
    int i;
    for (i = 0; i < TRIES_PER_PAGE && !args->stop; i++) {
        lseek(args->mem_fd1, (off_t)(args->thp_map + args->off), SEEK_SET);
        madvise(args->thp_map, MAP_SIZE, MADV_DONTNEED);
        write(args->mem_fd1, args->buf_to_write, PAGE_SIZE);
    }

    return ((void*)0);
}
